@@ -1,14 +1,15 @@
 package com.vnco.java6asm.rest;
 
 import com.github.javafaker.Faker;
-import com.vnco.common.model.image.ProductImage;
 import com.vnco.java6asm.rest.entity.category.Category;
+import com.vnco.java6asm.rest.entity.image.ProductImage;
 import com.vnco.java6asm.rest.entity.order.Order;
 import com.vnco.java6asm.rest.entity.order.OrderDetail;
 import com.vnco.java6asm.rest.entity.product.Product;
 import com.vnco.java6asm.rest.entity.user.Role;
 import com.vnco.java6asm.rest.entity.user.User;
 import com.vnco.java6asm.rest.repository.*;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.boot.CommandLineRunner;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
@@ -20,7 +21,8 @@ import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
 @Configuration
-@Profile ("local")
+@Profile ("bsData")
+@Slf4j
 public class BoostrapData {
     @Bean
     CommandLineRunner run(CategoryRepository categoryRepository, ProductRepository productRepository,
@@ -28,62 +30,70 @@ public class BoostrapData {
                           UserRepository userRepository, PasswordEncoder encoder
     ) {
         return args -> {
-            Faker fakerVN = new Faker(new Locale("vi"));
-            Faker faker   = new Faker();
+            Faker  fakerVN = new Faker(new Locale("vi"));
+            Faker  faker   = new Faker();
             Random random  = new Random();
             
-            List<Category> categories = IntStream.range(0, 5)
+            List<Category> categories = IntStream.range(1, 6)
                                                  .mapToObj(idx -> Category.builder()
                                                                           .name(fakerVN.commerce().department())
                                                                           .build())
                                                  .collect(Collectors.toList());
             categoryRepository.saveAll(categories);
-            List<ProductImage> images = IntStream.range(100, 200)
-                                                 .mapToObj(idx -> ProductImage.builder()
-                                                                              .url("https://picsum.photos/" + idx)
-                                                                              .build()).collect(Collectors.toList());
-            List<Product> products = IntStream.range(1, 21)
-                                              .mapToObj(id -> Product.builder().id((long) id)
-                                                                     .name(fakerVN.commerce().productName())
-                                                                     .quantity(random.nextInt(0, 10))
-                                                                     .price(random.nextDouble(50_000, 100_000))
-                                                                     .available(fakerVN.bool().bool())
-                                                                     .createDate(fakerVN.date()
-                                                                                        .between(
-                                                                                                new Date(
-                                                                                                        1609459200000L),
-                                                                                                new Date(1669852800000L)
-                                                                                        ).getTime())
-                                                                     .category(categories.get(
-                                                                             random.nextInt(categories.size() - 1)))
-                                                                     .build())
-                                              .toList();
+            
+            List<ProductImage> images =
+                    IntStream.range(200, 300)
+                             .mapToObj(idx -> ProductImage.builder().url("https://picsum.photos/" + idx).build())
+                             .collect(Collectors.toList());
+            List<Product> products = IntStream.range(1, 51).peek(id -> log.info(">> Index: {}", id))
+                                              .mapToObj(id -> {
+                                                  Category category = categories.get(
+                                                          random.nextInt(categories.size() - 1));
+                                                  return Product.builder().id((long) id)
+                                                                .name(fakerVN.commerce().productName())
+                                                                .quantity(random.nextInt(0, 10))
+                                                                .price(random.nextDouble(50_000, 100_000))
+                                                                .available(fakerVN.bool().bool())
+                                                                .createDate(fakerVN.date()
+                                                                                   .between(
+                                                                                           new Date(
+                                                                                                   1609459200000L),
+                                                                                           new Date(1669852800000L)
+                                                                                   ).getTime())
+                                                                .category(category).categoryId(category.getId())
+                                                                .build();
+                                              }).toList();
             
             products.forEach(product -> {
-                ProductImage image = images.get(faker.random().nextInt(0, images.size() - 1));
+                log.info(">> Debug: productId= {}", product.getId());
+                int          num   = faker.random().nextInt(0, images.size() - 1);
+                ProductImage image = images.get(num);
                 product.addImage(image);
+                images.remove(num);
+                log.info(">> Image is: {}", image.getClientId());
             });
             
             productRepository.saveAll(products);
-            
-            
             List<Role> roles = Arrays.asList(
                     new Role("DIRECTOR"),
                     new Role("STAFF"),
                     new Role("CUSTOMER")
             );
-            List<User> userList = IntStream.rangeClosed(0, 10)
+            List<User> userList = IntStream.rangeClosed(1, 11)
                                            .mapToObj(idx -> User.builder()
                                                                 .username(faker.name().username())
                                                                 .fullName(fakerVN.name().fullName())
                                                                 .phone(fakerVN.phoneNumber().cellPhone())
                                                                 .email(fakerVN.internet().emailAddress())
                                                                 .address(fakerVN.address().fullAddress())
-                                                                .password(encoder.encode(fakerVN.internet().password()))
+                                                                .password(encoder.encode(fakerVN
+                                                                                                 .internet()
+                                                                                                 .password()))
                                                                 .photo("/assets/images/user.png")
                                                                 .build())
                                            .peek(user -> {
-                                               user.getRoles().add(roles.get(random.nextInt(roles.size() - 1)));
+                                               user.getRoles().add(roles.get(random.nextInt(roles.size
+                                                                                                         () - 1)));
                                            })
                                            .collect(Collectors.toList());
             User user1 = userList.get(0);
@@ -107,38 +117,46 @@ public class BoostrapData {
             user3.getRoles().add(roles.get(0));
             userRepository.saveAll(userList);
             
-                        List<Order> orders = IntStream.range(0, 100).mapToObj(idx -> {
-                            User customer = userList.get(faker.random().nextInt(0, userList.size() - 1));
-                            Order order = Order.builder().customer(customer)
-                                               .username(customer.getUsername())
-                                               .email(customer.getEmail())
-                                               .address(customer.getAddress())
-                                               .phone(customer.getPhone())
-                                               .fullName(customer.getFullName())
-                                               .createTime(faker.date()
-                                                                .between(new Date(1641013200000L), new Date
-                                                                (1664600400000L))
-                                                                .getTime())
-                                               .build();
-
-                            List<OrderDetail> orderDetails = IntStream.range(1, faker.random().nextInt(2, 10))
-                                                                      .mapToObj(
-                                    index -> {
-                                        Product product = products.get(faker.random().nextInt(0, products.size() -
-                                        1));
-                                        return OrderDetail
-                                                       .builder()
-                                                       .order(order)
-                                                       .price(product.getPrice())
-                                                       .quantity(faker.random().nextInt(1, 9))
-                                                       .product(product)
-                                                       .productId(product.getId())
-                                                       .build();
-                                    }).toList();
-                            order.setOrderDetails(orderDetails);
-                            return order;
-                        }).toList();
-                        orderRepository.saveAll(orders);
+            List<Order> orders = IntStream.range(1, 101).mapToObj(idx -> {
+                User customer = userList.get(faker.random().nextInt(0, userList.size() - 1));
+                Order order = Order.builder().customer(customer)
+                                   .username(customer.getUsername())
+                                   .email(customer.getEmail())
+                                   .address(customer.getAddress())
+                                   .phone(customer.getPhone())
+                                   .fullName(customer.getFullName())
+                                   .createTime(faker.date()
+                                                    .between(new Date(1641013200000L), new Date
+                                                                                               (1664600400000L))
+                                                    .getTime())
+                                   .build();
+                
+                List<OrderDetail> orderDetails = IntStream.range(1, faker.random().nextInt(2, 10))
+                                                          .mapToObj(
+                                                                  index -> {
+                                                                      Product product = products.get
+                                                                                                        (faker.random()
+                                                                                                              .nextInt(
+                                                                                                                      0,
+                                                                                                                      products.size() -
+                                                                                                                      1));
+                                                                      return OrderDetail
+                                                                                     .builder()
+                                                                                     .order(order)
+                                                                                     .price(product
+                                                                                                    .getPrice())
+                                                                                     .quantity(faker
+                                                                                                       .random()
+                                                                                                       .nextInt(1, 9))
+                                                                                     .product(product)
+                                                                                     .productId(product
+                                                                                                        .getId())
+                                                                                     .build();
+                                                                  }).toList();
+                order.setOrderDetails(orderDetails);
+                return order;
+            }).toList();
+            orderRepository.saveAll(orders);
         };
         
     }
